DOCS: end-session v0.9.4 — UVC AAR linked, app renamed Lumen AI